utest: userUseCase 单元测试
